--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 900px;
-    height: 600px;
+    width: 70%;
+    /* height: 600px; */
     background-color:rgb(228, 207, 180);
-    margin:0 auto; 
+    margin:0 auto;
+     margin-top: 30px;
     border-radius: 20px;
 
  } 
@@ -46,3 +47,9 @@ input{
     border-radius: 5px;
 }
 
+@media  screen and (max-width:400px){
+    #main{
+        width: 380px;
+        flex-direction: column;
+    }
+ }
